--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,11 @@
             <version>7.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>servlet-api</artifactId>
+            <version>2.5</version>
+        </dependency>
 
         <dependency>
             <groupId>junit</groupId>
